Implémentation de la vue index pour afficher le contenu de l'objet recu de la méthode Index et modification de la vue layout

--- a/Authentification.Role.DKA/Views/Home/Index.cshtml
+++ b/Authentification.Role.DKA/Views/Home/Index.cshtml
@@ -1,8 +1,15 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model Dictionary<string, object>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="bg-primary panel-body">
+    <h4>Details sur les utilisateurs</h4>
 </div>
+
+<table class="table table-condensed table-bordered">
+    @foreach(var kvp in Model)
+    {
+        <tr>
+            <th>@kvp.Key</th>
+            <td>@kvp.Value</td>
+        </tr>
+    }
+</table>
