--- a/Authentification.Role.DKA/Views/Admin/Index.cshtml
+++ b/Authentification.Role.DKA/Views/Admin/Index.cshtml
@@ -14,6 +14,17 @@
                 <td>@user.Id</td>
                 <td>@user.UserName</td>
                 <td>@user.Email</td>
+
+                <td>
+                    <form asp-action="Delete" asp-route-id="@user.Id" method="post">
+                        <a class="btn btn-sm btn-primary" asp-action="Edit"
+                           asp-route-id="@user.Id">Edit</a>
+                        <button type="submit"
+                                class="btn btn-sm btn-danger">
+                            Delete
+                        </button>
+                    </form>
+                </td>
             </tr>
         }
     }
