--- a/Authentification.Role.DKA/Views/_ViewImports.cshtml
+++ b/Authentification.Role.DKA/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Authentification.Role.DKA
+@using Authentification.Role.DKA.Infrastructure
 @using Authentification.Role.DKA.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using Microsoft.AspNetCore.Identity.EntityFrameworkCore
