--- a/Authentification.Role.DKA/Views/_ViewImports.cshtml
+++ b/Authentification.Role.DKA/Views/_ViewImports.cshtml
@@ -1,6 +1,4 @@
-﻿@using Authentification.Role.DKA
-@using Authentification.Role.DKA.Infrastructure
-@using Authentification.Role.DKA.Models
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using Authentification.Role.DKA.Models
 @using Microsoft.AspNetCore.Identity.EntityFrameworkCore
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper Authentification.Role.DKA.Infrastructure.*, Authentification.Role.DKA
